2001-11-10  Bob Montgomery  <bob_montgomery@hp.com>

	* module/oprofile.c: fix pid/pgrp filter to reset counter 

2001-11-08  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* configure.in: bump to 0.0.8cvs
 
2001-11-07  John Levon  <moz@compsoc.man.ac.uk>

	* acinclude.m4:
	* configure.in: fixes for configuration when Qt2 not found

	* child_reader.h:
	* child_reader.cpp: compile with gcc 3.0
 
2001-11-07  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.0.7
 
2001-11-07  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in:
	* module/oprofile.h:
	* module/oprofile.c: fail if hard_get_current() exists
	  - this won't work
 
2001-11-06  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.1.in: reformat options
	* doc/oprofile.sgml: clarify options that require argument.
	  Document short option

	* gui/oprof_start_util.cpp: fix basename()

	* pp/oprofpp.cpp:
	* pp/oprofpp.h:
	* pp/opf_filter.cpp: better options handling

	* module/oprofile.c: update one comment

	* TODO: update

2001-11-06  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in:
	* module/oprofile.h:
	* module/oprofile.c: support for hard_get_current()
 
2001-11-06  John Levon  <moz@compsoc.man.ac.uk>

	* module/oprofile.h:
	* module/oprofile.c: make allow_unload exist for UP
	  too (default to 1)
 
2001-11-05  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* module/oprofile.c: fix nr_interrupts sysctl

2001-11-04  Philippe Elie  <ph_e@club-internet.fr>

	* dae/op_start:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui: handle note table size sysctl

	* module/op_syscalls.c: handle dname hash coding collision with
	  a linear search.

	* module/oprofile.c:
	* module/oprofile.h:
	* module/op_syscalls.c: Use a struct to hold the whole
	  sysctl settable things rather global var.

2001-11-03  Philippe Elie  <ph_e@club-internet.fr>

	* modules/oprofile.h: add a sysctl struct to hold